linux fixes