@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
+# This start script is meant to be used in the binary distribiution of Gade where the jdk is bundled
+
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
 
 function notify() {
@@ -67,6 +69,8 @@ if [[ "${OS}" == "mac" ]]; then
   JAVA_OPTS="$JAVA_OPTS -Xdock:icon=$DIR/Contents/Resources/gade.icns"
 fi
 
+MODULES=javafx.controls,javafx.media,javafx.web,javafx.swing
+
 if [[ "${OS}" == "win" ]]; then
   if [[ -z "$JAVA_CMD" ]]; then
 	  JAVA_CMD="javaw"
@@ -76,15 +80,28 @@ if [[ "${OS}" == "win" ]]; then
 
 	# Fixes bug  Unable to get Charset 'cp65001' for property 'sun.stdout.encoding'
 	JAVA_OPTS="${JAVA_OPTS} -Dsun.stdout.encoding=UTF-8 -Dsun.err.encoding=UTF-8"
-	start "${BIN_DIR}\${JAVA_CMD}" -cp "${LIB_DIR}/${JAR_NAME}" se.alipsa.gade.splash.SplashScreen
+	start "${BIN_DIR}\${JAVA_CMD}" \
+		--enable-native-access=javafx.graphics,javafx.media,javafx.web \
+    --module-path ${LIB_DIR}/$OS --add-modules ${MODULES}  -Djava.library.path="${LD_PATH}" \
+    -cp "${LIB_DIR}/${JAR_NAME}" se.alipsa.gade.splash.SplashScreen
 	# shellcheck disable=SC2068
-	start "${BIN_DIR}\${JAVA_CMD}" -Djava.library.path="${LD_PATH}" -cp "${CLASSPATH}" $JAVA_OPTS se.alipsa.gade.Gade
+	start "${BIN_DIR}\${JAVA_CMD}" -Djava.library.path="${LD_PATH}" \
+		--enable-native-access=javafx.graphics,javafx.media,javafx.web \
+    --module-path ${LIB_DIR}/$OS --add-modules ${MODULES}  -Djava.library.path="${LD_PATH}" \
+    -cp "${CLASSPATH}" $JAVA_OPTS se.alipsa.gade.Gade
 
 else
 	JAVA_CMD="java"
-	CLASSPATH="${LIB_DIR}/*"
 	LD_PATH="${LIB_DIR}"
-	"${BIN_DIR}/${JAVA_CMD}" -cp "${LIB_DIR}/${JAR_NAME}" $JAVA_OPTS se.alipsa.gade.splash.SplashScreen &
+	"${BIN_DIR}/${JAVA_CMD}" \
+	--enable-native-access=javafx.graphics,javafx.media,javafx.web \
+  --module-path ${LIB_DIR}/$OS --add-modules ${MODULES}  -Djava.library.path="${LD_PATH}" \
+  -cp "${LIB_DIR}/${JAR_NAME}" $JAVA_OPTS \
+	se.alipsa.gade.splash.SplashScreen &
 	# shellcheck disable=SC2068
-	"${BIN_DIR}/${JAVA_CMD}" -Djava.library.path="${LD_PATH}" -cp "$CLASSPATH" $JAVA_OPTS se.alipsa.gade.Gade &
+	"${BIN_DIR}/${JAVA_CMD}" -Djava.library.path="${LD_PATH}" \
+		--enable-native-access=javafx.graphics,javafx.media,javafx.web \
+    --module-path ${LIB_DIR}/$OS --add-modules ${MODULES}  -Djava.library.path="${LD_PATH}" \
+    -cp "${LIB_DIR}/*" $JAVA_OPTS \
+	se.alipsa.gade.Gade &
 fi
